--- a/public/backend/css/style.css
+++ b/public/backend/css/style.css
@@ -15,6 +15,12 @@
     padding-top: 0px;
 }
 
+.sidebar .nav-collapse, .sidebar[data-background-color=white] .nav-collapse {
+    margin-bottom: 0px;
+    padding-bottom: 10px;
+    padding-top: 0px;
+}
+
 .page-inner {
     padding: 4px 20px 0 20px !important;
 }
